GNOME Bugzilla – Bug 708477
lib: Correct error reporting for connect methods
Last modified: 2013-09-22 20:22:16 UTC
And make sure to handle cancellations correctly.
Created attachment 255424 [details] [review] lib: Correct error reporting for connect methods
Created attachment 255432 [details] [review] lib: Correct error reporting for connect methods And make sure to handle cancellations correctly.
Created attachment 255433 [details] [review] lib: Fix double-free when finishing connection The proxy was already unref'ed when we started the connection/disconnection so the only places that should hold a reference are the tree model, and the operation itself. Fixes the bugs reported in: http://retrace.fedoraproject.org/faf/reports/205937/
Review of attachment 255432 [details] [review]: looks right to me
Review of attachment 255433 [details] [review]: looks right
Attachment 255432 [details] pushed as dbcb379 - lib: Correct error reporting for connect methods Attachment 255433 [details] pushed as 3d77ac7 - lib: Fix double-free when finishing connection