lib: Correct error reporting for connect methods

And make sure to handle cancellations correctly.

https://bugzilla.gnome.org/show_bug.cgi?id=708477